8193502: [Linux] Dialog height switches between correct and too small when showing and hiding a Dialog repeatedly

Reviewed-by: kcr, pbansal